# getoutpost-mcp-server

./: .clauderc.json  .clauderc.yaml  .env.example  .gitignore  .npmignore  EXAMPLES.md  PRIVACY.md  README.md  jest.config.js  mcp_server.ts  mcp_server_stdio.ts  mcp_spec.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  start_server.sh  system_prompt.md  system_prompt_claude.md  system_prompt_perplexity.md  tsconfig.json
api/: client.ts
auth/: credentials.ts  tokens.ts
tests/: conftest.py  test_api.py  test_api.spec.ts  test_client.py  test_client.spec.ts  test_tokens.py
