[tool.poetry]
name = "getoutpost-mcp-server"
version = "0.1.0"
description = "MCP Server for GetOutpost Financial APIs"
authors = ["Ashwin <ashwinbhskr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
httpx = "^0.25.2"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
mcp = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "mcp_server:main"